[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/Pause.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )

[node name="DimBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 559.0
margin_top = 274.0
margin_right = 721.0
margin_bottom = 445.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 162.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 162.0
margin_bottom = 114.0
custom_colors/font_color = Color( 1, 0.6, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.909804, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="settings" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 134.0
margin_right = 162.0
margin_bottom = 171.0
custom_colors/font_color = Color( 1, 0.6, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.909804, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 162.0
margin_bottom = 171.0
custom_colors/font_color = Color( 1, 0.6, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.909804, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
